Extract runner reporting module and strict fixture lookup
Introduce RunAccumulator and move report writing + GitHub annotation emission into runner_reporting. Enforce get_shared_fixture lookup-only semantics (no lazy setup side effect) while preserving teardown-time access to initialized fixtures. Update CMake/Bazel/Meson/xmake runtime source manifests and document modularization design decisions.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -78,7 +78,12 @@ cc_library(
     name = 'gentest_runtime',
     srcs = [
         'src/bench_stats.cpp',
+        'src/runner_case_invoker.cpp',
+        'src/runner_cli.cpp',
         'src/runner_impl.cpp',
+        'src/runner_reporting.cpp',
+        'src/runner_selector.cpp',
+        'src/runner_test_plan.cpp',
     ],
     hdrs = glob([
         'include/gentest/*.h',
