Extract fixture runtime module and harden run-gate semantics

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -79,11 +79,19 @@ cc_library(
     srcs = [
         'src/bench_stats.cpp',
         'src/runner_case_invoker.cpp',
+        'src/runner_case_invoker.h',
         'src/runner_cli.cpp',
+        'src/runner_cli.h',
+        'src/runner_fixture_runtime.cpp',
+        'src/runner_fixture_runtime.h',
         'src/runner_impl.cpp',
         'src/runner_reporting.cpp',
+        'src/runner_reporting.h',
+        'src/runner_result_model.h',
         'src/runner_selector.cpp',
+        'src/runner_selector.h',
         'src/runner_test_plan.cpp',
+        'src/runner_test_plan.h',
     ],
     hdrs = glob([
         'include/gentest/*.h',
