--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,7 @@ libgentest_runtime = static_library(
     'src/bench_stats.cpp',
     'src/runner_case_invoker.cpp',
     'src/runner_cli.cpp',
+    'src/runner_fixture_runtime.cpp',
     'src/runner_impl.cpp',
     'src/runner_reporting.cpp',
     'src/runner_selector.cpp',
