--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,7 @@ libgentest_runtime = static_library(
     'src/runner_case_invoker.cpp',
     'src/runner_cli.cpp',
     'src/runner_fixture_runtime.cpp',
+    'src/runner_measured_executor.cpp',
     'src/runner_impl.cpp',
     'src/runner_reporting.cpp',
     'src/runner_selector.cpp',
