--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(gentest_runtime ${_gentest_runtime_libtype}
     ${PROJECT_SOURCE_DIR}/src/runner_case_invoker.cpp
     ${PROJECT_SOURCE_DIR}/src/runner_cli.cpp
     ${PROJECT_SOURCE_DIR}/src/runner_fixture_runtime.cpp
+    ${PROJECT_SOURCE_DIR}/src/runner_measured_executor.cpp
     ${PROJECT_SOURCE_DIR}/src/runner_reporting.cpp
     ${PROJECT_SOURCE_DIR}/src/runner_selector.cpp
     ${PROJECT_SOURCE_DIR}/src/runner_test_plan.cpp
