Modularize runner execution and harden fixture scope lookup
Extract orchestrator and test execution logic from runner_impl into dedicated modules.

Move shared fixture acquisition into fixture runtime boundary and reuse it from measured executor.

Add fail-fast measured regression checks and suite-scope descendant/most-specific fixture lookup regressions.

Implement suite-scope descendant matching with most-specific selection for shared fixture lookups.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -87,11 +87,15 @@ cc_library(
         'src/runner_measured_executor.cpp',
         'src/runner_measured_executor.h',
         'src/runner_impl.cpp',
+        'src/runner_orchestrator.cpp',
+        'src/runner_orchestrator.h',
         'src/runner_reporting.cpp',
         'src/runner_reporting.h',
         'src/runner_result_model.h',
         'src/runner_selector.cpp',
         'src/runner_selector.h',
+        'src/runner_test_executor.cpp',
+        'src/runner_test_executor.h',
         'src/runner_test_plan.cpp',
         'src/runner_test_plan.h',
     ],
