--- a/meson.build
+++ b/meson.build
@@ -24,8 +24,10 @@ libgentest_runtime = static_library(
     'src/runner_fixture_runtime.cpp',
     'src/runner_measured_executor.cpp',
     'src/runner_impl.cpp',
+    'src/runner_orchestrator.cpp',
     'src/runner_reporting.cpp',
     'src/runner_selector.cpp',
+    'src/runner_test_executor.cpp',
     'src/runner_test_plan.cpp',
   ],
   include_directories: inc,
