Add remaining runner modularization regression gates
Add fixture-group shuffle invariant regression and outcome consistency matrix checks. Enable runner-level infra parity in Allure output and gate it with a dedicated CMake script test. Wire GENTEST_USE_BOOST_JSON into gentest_runtime so Allure JSON writing is compiled in when requested.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,11 @@ endif()
 target_link_libraries(gentest_runtime
     PUBLIC fmt::fmt)
 
+if(GENTEST_USE_BOOST_JSON)
+    # Enable the runtime Allure JSON writer implementation.
+    target_compile_definitions(gentest_runtime PRIVATE GENTEST_USE_BOOST_JSON BOOST_JSON_NO_LIB)
+endif()
+
 target_include_directories(gentest_runtime
     PRIVATE
         ${PROJECT_SOURCE_DIR}/third_party/include)
